--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,27 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: "mtavruli";
+  src: url(./utils/fonts/mtavruli.ttf);
+}
+
+:root{
+  --text-color:rgb(34,37,40);
+  --title-color: #00467A;
+  --red: #A80909;
+  --gray: #7A868C;
+  --shidni: #C66A84;
+}
+
+html{
+  overflow-x: hidden;
+}
 body {
   max-width: 100vw;
   overflow-x: hidden;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'mtavruli',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -17,4 +33,17 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
+input{
+  -webkit-appearance: none; /* For Safari and Chrome */
+  -moz-appearance: none; /* For Firefox */
+  appearance: none; /* For other modern browsers */
+  outline: none;
+  border: 1px solid var(--gray);
 }
