--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -58,6 +58,7 @@
     font-size: 16px;
     font-family: 'mtavruli';
     color: var(--gray);
+    border-radius: 10px;
 }
 
 .name_lastName{
@@ -76,7 +77,7 @@
 
     font-size: 22px;
     font-weight: 600;
-
+    border-radius: 10px;
     cursor: pointer;
 }
 
