--- a/src/components/cardComponent/CardComponent.css
+++ b/src/components/cardComponent/CardComponent.css
@@ -25,12 +25,28 @@
 }
 
 .card p{
-    background-color: var(--shidni);
+    background-color: var(--title-color);
     padding: 10px;
     position: absolute;
     bottom: 10px;
-    left: 10px;
+    left: 0px;
     z-index: 3;
 
     font-size: 20px;
+}
+
+@media (max-width:800px) {
+    .card{
+        position: relative;
+        width: 90%;
+        height: 250px;
+    
+        overflow: hidden;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    .card p{
+        font-size: 19px;
+    }
 }
