--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,6 @@
 .footer{
     width: 100%;
     height: 150px;
-    background-color: var(--gray);
+    background-color: var(--title-color);
+    position: absolute;
 }
