--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 
 html{
   overflow-x: hidden;
+  overscroll-behavior:none;
 }
 body {
   max-width: 100vw;
@@ -46,4 +47,9 @@ input{
   appearance: none; /* For other modern browsers */
   outline: none;
   border: 1px solid var(--gray);
+}
+
+
+.marginTop100{
+  margin-top: 100px;
 }
