--- a/src/pages/gsg/gsgAbout.css
+++ b/src/pages/gsg/gsgAbout.css
@@ -34,3 +34,14 @@
     flex-wrap: wrap;
     gap: 20px;
 }
+
+@media (max-width:800px) {
+    .gsg_about{
+        box-sizing: border-box;
+        height: 100vh;
+        width: 100%;
+        padding-left: 0px;
+        padding-top: 60px;
+    }
+        
+}
