--- a/src/pages/gso/aboutUs.css
+++ b/src/pages/gso/aboutUs.css
@@ -34,3 +34,23 @@
     flex-wrap: wrap;
     gap: 20px;
 }
+
+@media (max-width:800px) {
+    .gso_about{
+        padding-left: 0px;
+        padding-top: 100px;
+    }
+
+    .gs0_about_desc{
+        padding: 0 20px 0 20px;
+    }
+
+    .links_in_about{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+}
