--- a/src/pages/gso/completedProjectsGSO.css
+++ b/src/pages/gso/completedProjectsGSO.css
@@ -23,3 +23,18 @@
     display: flex;
     gap: 20px;
 }
+
+@media (max-width:800px) {
+    .completed_projects{
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top:100px;
+    }
+
+    .conference_cards{
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
