--- a/src/components/cardComponent/CardComponent.css
+++ b/src/components/cardComponent/CardComponent.css
@@ -40,7 +40,7 @@
         position: relative;
         width: 90%;
         height: 250px;
-    
+        margin: 0 auto;
         overflow: hidden;
         color: #fff;
         cursor: pointer;
