--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,9 @@
 .footer{
     width: 100%;
     height: 150px;
+    box-sizing: border-box;
     background-color: var(--title-color);
     position: absolute;
+    bottom: 0;
+    left: 0;
 }
