--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,9 @@ html{
   overscroll-behavior:none;
 }
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
   margin: 0;
   font-family: 'mtavruli',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
