--- a/src/pages/gso/completedProjectsGSO/conferenceStyles.css
+++ b/src/pages/gso/completedProjectsGSO/conferenceStyles.css
@@ -3,7 +3,7 @@
     height: 100vh;
     box-sizing: border-box;
     padding-left: 250px;
-
+    overflow-x: hidden;
     padding-top: 80px;
 }
 
@@ -35,17 +35,63 @@
 
 .image_gallery{
     width: 100%;
-    box-sizing: border-box;
+    height: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 100px;
     margin-top: 20px;
+    margin-bottom: 100px;
 }
 
 .image_layout{
     display: flex;
     gap: 10px 10px;
     flex-wrap: wrap;
-    margin: 0 auto;
+}
+
+@media (max-width:800px) {
+    .conference1{
+        padding-left: 0px;
+        padding-top: 100px;
+    }
+    .conf1_title{
+        font-size: 24px;
+        color: var(--title-color);
+        text-align: center;
+        padding: 0 10px 0 10px;
+    }
+    
+    .conf1_desc,
+    .competitors{
+        margin-top: 20px;
+        padding: 0 10px 0 10px;
+        color: var(--gray);
+        line-height: 24px;
+    }
+    
+    .gallery_title{
+        color: var(--title-color);
+        font-size: 24px;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    .image_gallery{
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 0;
+        margin-top: 20px;
+        margin-bottom: 100px;
+    }
+    .image_layout{
+        display: flex;
+        gap: 10px 0px;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
 }
