--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,11 +1,11 @@
 .main_page{
     width: 100%;
-    height: 100vh;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-left:250px;
+    margin-bottom: 100px;
 }
 
 .main_logos{
