--- a/src/pages/gso/aboutUs.css
+++ b/src/pages/gso/aboutUs.css
@@ -1,7 +1,7 @@
 .gso_about{
     box-sizing: border-box;
-    height: 100vh;
     width: 100%;
+    min-height: calc(100vh - 150px);
     padding-left: 250px;
     padding-top: 60px;
 }
