--- a/src/pages/gso/completedProjectsGSO.css
+++ b/src/pages/gso/completedProjectsGSO.css
@@ -1,15 +1,13 @@
 .completed_projects{
     padding-top: 80px;
     width: 100%;
-    height: 100vh;
     box-sizing: border-box;
-
+    min-height: calc(100vh - 150px);
     padding-left: 250px;
-
+    margin-bottom: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
 
 }
 
