--- a/src/pages/gso/futureProjectsGSO/upcoming.css
+++ b/src/pages/gso/futureProjectsGSO/upcoming.css
@@ -7,11 +7,36 @@
     flex-direction: column;
     align-items: center;
     min-height: calc(100vh - 150px);
-
+    overflow-x: hidden;
 }
 
 .upgomint_content{
     width: 100%;
     padding-left: 100px;
     color: var(--gray);
+}
+
+@media (max-width:800px) {
+    .upcoming{
+        padding-top: 120px;
+        width: 100%;
+        box-sizing: border-box;
+        padding-left: 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: calc(100vh - 150px);
+    }
+
+    .upgomint_content{
+        width: 100%;
+        padding-left: 0px;
+        color: var(--gray);
+
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        padding-left: 50px;
+    }
 }
