--- a/src/pages/gsg/gsgAbout.css
+++ b/src/pages/gsg/gsgAbout.css
@@ -1,6 +1,6 @@
 .gsg_about{
     box-sizing: border-box;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     padding-left: 250px;
     padding-top: 60px;
@@ -38,10 +38,15 @@
 @media (max-width:800px) {
     .gsg_about{
         box-sizing: border-box;
-        height: 100vh;
-        width: 100%;
         padding-left: 0px;
-        padding-top: 60px;
+        padding-top: 120px;
+    }
+
+    .gsg_about_desc{
+        padding: 0 20px 0 20px;
+        margin-top: 10px;
+        color: var(--gray);
+        line-height: 24px;
     }
         
 }
