--- a/src/pages/gso/completedProjectsGSO.css
+++ b/src/pages/gso/completedProjectsGSO.css
@@ -19,6 +19,8 @@
 
 .conference_cards{
     display: flex;
+    flex-wrap: wrap;
+    padding: 0 130px;
     gap: 20px;
 }
 
@@ -33,6 +35,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        padding: 0;
     }
 
     .compl_proj_title{
