--- a/src/pages/gso/completedProjectsGSO/conferenceStyles.css
+++ b/src/pages/gso/completedProjectsGSO/conferenceStyles.css
@@ -65,6 +65,14 @@
     cursor: pointer;
 }
 
+.conference3{
+    padding-top: 80px;
+    width: 100%;
+    min-height: calc(100vh - 150px);
+    box-sizing: border-box;
+    padding-left: 250px;
+}
+
 @media (max-width:800px) {
     .conference1{
         padding-left: 0px;
@@ -109,4 +117,13 @@
         align-items: center;
         justify-content: center;
     }
+
+    .conference3{
+        padding-top: 120px;
+        width: 100%;
+        min-height: calc(100vh - 150px);
+        box-sizing: border-box;
+        padding-left: 0px;
+    }
+    
 }
