--- a/src/pages/gso/patient.css
+++ b/src/pages/gso/patient.css
@@ -13,6 +13,15 @@
     text-align: center;
 }
 
+.patient_doc_list{
+    margin-top: 50px;
+    padding: 0 150px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    margin-bottom: 100px;
+}
+
 
 @media (max-width:800px) {
     .patient{
@@ -23,4 +32,15 @@
         overflow-x: hidden;
         padding-top: 120px;
     }
+
+
+.patient_doc_list{
+    margin-top: 50px;
+    padding: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
 }
