--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,7 +14,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 40px;
 
     background-color: #fff;
 }
@@ -32,6 +32,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.navbar_icon{
+    display: none;
 }
 
 .navbar_header1{
@@ -61,15 +65,6 @@
     transition: all .2s ease;
 }
 
-.nav_links::after{
-    position: absolute;
-    content: '';
-    left: 0;
-    bottom: -10px;
-    height: 1px;
-    width: 90%;
-    background-color: #5d5d5d2c;
-}
 
 
 @media (max-width:800px) {
@@ -142,9 +137,19 @@
         height: 20px;
     }
 
-    .nav_links{
-        
+    .home_link{
+        display: none;
     }
 
-
+    .navbar_icon{
+        display: block;
+        position: absolute;
+        left: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 20px;
+        color: var(--title-color);
+        font-size: 900;
+        font-family: sans-serif;
+    }
 }
