--- a/src/components/cardComponent/CardComponent.css
+++ b/src/components/cardComponent/CardComponent.css
@@ -38,7 +38,7 @@
 @media (max-width:800px) {
     .card{
         position: relative;
-        width: 90%;
+        width: 350px;
         height: 250px;
         margin: 0 auto;
         overflow: hidden;
