--- a/src/pages/gsg/futureProjects/upcomingsgs.css
+++ b/src/pages/gsg/futureProjects/upcomingsgs.css
@@ -8,3 +8,17 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media (max-width:800px) {
+    .sgs_logos{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        padding-left: 0px;
+    }
+
+    .sgs_upcoming_title{
+        text-align: center;
+    }
+}
