--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,45 @@
 .footer{
+    position: relative;
     width: 100%;
-    height: 150px;
+    height: 100px;
     box-sizing: border-box;
     background-color: var(--title-color);
+    padding-left: 250px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    color: #fff;
+}
+
+.water_mark{
+    position: absolute;
+    bottom: 5px;
+    left: calc(50%);
+    transform: translateX(-50%) translateX(125px);
+
+    font-size: 10px;
+}
+
+.footer_logo{
+    height: 30px;
+    cursor: pointer;
+    width: auto;
+}
+
+
+@media (max-width:800px) {
+    .footer{
+        padding-left: 0;
+    }
+
+    .water_mark{
+        position: absolute;
+        bottom: 10px;
+        left: calc(50%);
+        transform: translateX(-50%) translateX(0);
+    
+        font-size: 10px;
+    }
 }
