--- a/src/pages/gso/aboutUs.css
+++ b/src/pages/gso/aboutUs.css
@@ -31,6 +31,7 @@
     margin-top: 50px;
     margin-bottom: 50px;
     display: flex;
+    padding: 0 40px;
     flex-wrap: wrap;
     gap: 20px;
 }
@@ -48,6 +49,7 @@
     .links_in_about{
         margin-top: 50px;
         margin-bottom: 50px;
+        padding: 0 0;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
