--- a/src/pages/gso/books.css
+++ b/src/pages/gso/books.css
@@ -23,6 +23,17 @@
     gap: 40px 20px;
 }
 
+@media (max-width:1399px) {
+    .book_list{
+        padding: 0 160px;
+        margin-top: 50px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        gap: 40px 20px;
+    }
+}
+
 @media (max-width:800px) {
     .books{
         width: 100%;
@@ -33,6 +44,7 @@
     }
     .book_list{
         margin-top: 20px;
+        padding: 0 0;
         display: flex;
         flex-direction: column;
         align-items: center;
