--- a/src/components/cardComponent/CardComponent.css
+++ b/src/components/cardComponent/CardComponent.css
@@ -35,6 +35,22 @@
     font-size: 20px;
 }
 
+@media (max-width:1399px) {
+    .card{
+        position: relative;
+        width: 410px;
+        height: 250px;
+        margin: 0 auto;
+        overflow: hidden;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    .card p{
+        font-size: 19px;
+    }
+}
+
 @media (max-width:800px) {
     .card{
         position: relative;
