--- a/src/pages/gso/completedProjectsGSO/conferenceStyles.css
+++ b/src/pages/gso/completedProjectsGSO/conferenceStyles.css
@@ -34,6 +34,12 @@
     height: auto;
 }
 
+.lightBox_image_conference3{
+    width: 320px;
+    height: 230px;
+    object-fit: cover;
+}
+
 .image_gallery{
     width: 100%;
     height: fit-content;
