--- a/src/pages/gso/futureProjectsGSO/upcoming.css
+++ b/src/pages/gso/futureProjectsGSO/upcoming.css
@@ -1,12 +1,13 @@
 .upcoming{
     padding-top: 80px;
+    padding-right: 50px;
     width: 100%;
+    min-height: 100vh;
     box-sizing: border-box;
     padding-left: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: calc(100vh - 150px);
     overflow-x: hidden;
 }
 
@@ -19,6 +20,7 @@
 @media (max-width:800px) {
     .upcoming{
         padding-top: 120px;
+        padding-bottom: 50px;
         width: 100%;
         box-sizing: border-box;
         padding-left: 0px;
