--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,7 @@
 .footer{
-    position: relative;
+    /* position: fixed;
+    bottom: 0;
+    left: 0; */
     width: 100%;
     height: 100px;
     box-sizing: border-box;
@@ -11,6 +13,7 @@
     justify-content: center;
     gap: 40px;
     color: #fff;
+    z-index: 999;
 }
 
 .water_mark{
